<resources>
    <string name="app_name">GroceryExpiryTrackingApp</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="register">Register</string>
    <string name="comfirm_password">Comfirm Password</string>
    <string name="already_have_an_account_click_to_login">Already Have an Account? Login</string>
    <string name="full_name">Full Name</string>
    <string name="item_name">Item Name</string>
    <string name="expire_date">Expire Date</string>
    <string name="select_categories">Select Categories</string>
    <string name="purchases_date">Purchases Date</string>
    <string name="add_item">Add Item</string>
    <string name="day_to_expire">Day To Expire</string>
    <string name="days_left">Days Left</string>
    <string name="barcode">Barcode</string>
    <string name="quantities">Quantities</string>
    <string name="mission_title">Mission Title</string>
    <string name="mission_desc">Mission Desc</string>
    <string name="reward_point">Reward Point</string>
    <string name="welcome_to_our_family">Welcome to our family, </string>

    <string-array name="item_cat">
        <item>Frozen Food</item>
        <item>Snacks</item>
        <item>Candy</item>
    </string-array>
</resources>