<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".Item_Update">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            app:cardCornerRadius="50dp"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="30dp"
            android:layout_gravity="center"
            android:layout_marginBottom="5dp"
            android:id="@+id/card3"
            app:cardBackgroundColor="@color/zxing_transparent"
            android:elevation="10dp">

        <ImageView
            android:id="@+id/item_pic1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:src="@drawable/add_image" />

        </androidx.cardview.widget.CardView>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/item_name1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/item_name" />
        </com.google.android.material.textfield.TextInputLayout>



        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/item_expire_date1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/expire_date" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/item_barcode1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/barcode" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/numItem1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/quantities" />
        </com.google.android.material.textfield.TextInputLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <com.github.clans.fab.FloatingActionMenu
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"

                app:menu_colorPressed="@color/lavender"
                app:menu_colorNormal="@color/lavender"
                app:fab_size="normal"
                app:menu_icon="@drawable/list_icon"
                app:menu_openDirection="up"
                app:menu_labels_showShadow="true"
                >
                <com.github.clans.fab.FloatingActionButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/btn_delete_item"
                    android:src="@drawable/delete_icon"
                    app:fab_showShadow="true"
                    app:fab_colorNormal="@color/red"
                    app:fabSize="mini"/>

                <com.github.clans.fab.FloatingActionButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/btn_update_item"
                    android:src="@drawable/baseline_done_all_24"
                    app:fab_showShadow="true"
                    app:fab_colorNormal="@color/green"
                    app:fabSize="mini"/>

            </com.github.clans.fab.FloatingActionMenu>



        </RelativeLayout>
    </LinearLayout>
</ScrollView>